[package]
name = "adventure_generator"
version = "0.1.0"
edition = "2024"

[dependencies]
dialoguer = "0.11.0"
json = "0.12.4"
lingua = "1.7.1"
natural = "0.5.0"
rand = "0.9.1"
rust-bert = "0.23.0"
rust_tokenizers = "8.1.1"
tch = "0.17.0"
whatlang = "0.16.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
crossterm = "0.29.0"
sorting_rs = "1.2.10"
once_cell = "1.19.0"
uuid = { version = "1.8.0", features = ["v4"] }
